<resources>
    <string name="app_name">nearby_feature</string>
    <string name="google_map_key">AIzaSyB4sxrW5vvTZKQCebWquw8rKhyCYnSrlYM</string>

    <string name="atm">ATM</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="login_sidemenu">Login</string>
    <string name="editText">Enter the Keyword Here</string>
    <string name="filterByBanks">Bank</string>
    <string-array name="languagelist">
        <item name="hindi">HINDI</item>
        <item name="english">ENGLISH</item>
        <item name="tamil">TAMIL</item>
        <item name="telugu">TELUGU</item>
    </string-array>

    <string-array name="banklist">
        <item name="sbi">SBI</item>
        <item name="axis">AXIS</item>
        <item name="hdfc">HDFC</item>
        <item name="baroda">BARODA</item>
        <item name="punjab">PUNJAB NATIONAL BANK</item>
    </string-array>

    <string-array name="themeslist">
        <item name ="standard">STANDARD</item>
        <item name ="dark">DARK</item>
        <item name ="aubergine">AUBERGINE</item>
        <item name ="retro">RETRO</item>
        <item name ="silver">SILVER</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_activity">User Activity</string>
    <string name="home">Home</string>
    <string name="home_sidemenu">Home</string>
    <string name="user_related_sidemenu">User-Related</string>
    <string name="feedback_sidemenu">Feedback</string>
    <string name="missing_bank_suggestions_sidemenu">Missing Bank Suggestions</string>
    <string name="disclaimer_and_help_sidemenu">Disclaimer and Help</string>
    <string name="help_sidemenu">Help</string>
    <string name="disclaimer_sidemenu">Disclaimer</string>
    <string name="search_menu">Search</string>
    <string name="language_dialogbox">Language</string>
    <string name="settings_settings">settings</string>

    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="buffer">Buffer Distance</string>
    <string name="language">Language</string>

    <string name="filterByOpenNow">Filter By Open Now</string>
    <string name="toggleOff">Open Now</string>
    <string name="toggleOn">Open Now Enabled</string>
</resources>
