<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.mapFragment">


    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp">
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterByOpenNow"
            android:id="@+id/filterByOpenNow"
            android:background="@color/white"
            android:padding="5dp"


            />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:elevation="5dp"
        app:cardCornerRadius="20dp"
        app:layout_anchor="@+id/cardView"
        app:layout_anchorGravity="start">

        <Spinner
            android:id="@+id/filterByBanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:entries="@array/banklist"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/filterByBanks"
            app:layout_anchor="@id/filterByOpenNow"

            app:layout_anchorGravity="right"

            />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_anchor="@+id/google_map"
        app:layout_anchorGravity="right"
        android:layout_marginTop="10dp"
        android:id="@+id/settings"
        app:backgroundTint="@color/white"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/voicesearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_marginTop="70dp"
        android:src="@drawable/voice_search"
        app:layout_anchor="@id/settings"
        app:layout_anchorGravity="end"
        app:backgroundTint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/textsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_marginTop="130dp"
        android:src="@drawable/search"
        app:layout_anchor="@id/voicesearch"
        app:layout_anchorGravity="end"
        app:backgroundTint="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardviewForEditText"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/editText"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/white"
        android:visibility="gone"
        android:id="@+id/keyword"/>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="show"
        app:layout_anchor="@id/cardviewForEditText"
        app:layout_anchorGravity="bottom|end" />

    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:mbn_backgroundBottomColor="@color/darkgreen"
        app:mbn_defaultIconColor="@color/white"
        app:mbn_rippleColor="@color/silver"
        app:mbn_selectedIconColor="@color/darkgreen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="View List"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:icon="@drawable/result_list"
        app:iconTint="@color/white"
        app:layout_anchor="@+id/google_map"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="3dp"/>




    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/listOfplaces"
        android:layout_alignParentBottom="true"
        app:layout_anchor="@+id/google_map"
        app:layout_anchorGravity="bottom|center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:behavior_peekHeight="500dp"
        app:behavior_hideable="true"
        >




    </androidx.recyclerview.widget.RecyclerView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>